--- a/android/build.gradle
+++ b/android/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.library'
 android {
     compileSdkVersion 30
     buildToolsVersion = "30.0.2"
-
+    namespace "com.github.yamill.orientation"
     defaultConfig {
         minSdkVersion 21
         targetSdkVersion 30
